--- a/src/styles/WeatherOverview.css
+++ b/src/styles/WeatherOverview.css
@@ -29,6 +29,10 @@
   .overview-container {
     max-height: 300px;
   }
+  .overview-data {
+    margin-left: 28px;
+    margin-right: 28px;
+  }
   .overview-data > div:first-child {
     font-size: max(8vw, 62px);
     font-weight: 500;
